syntax = "proto3";

package ON.Fragments.Authorization.Payments.Paypal;

message PaypalSettings {
  bool Enabled = 1;
  string Url = 2;
  string ClientID = 3;
  string ClientSecret = 4;
}
